syntax = "proto3";

package api;

import "google/api/annotations.proto";

option go_package = "example/api";

// Simple greeter service
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post : "/v1/greeter:SayHello"
      body : "*"
    };
  }

  // Stream greetings
  rpc SayManyHellos(HelloRequest) returns (stream HelloResponse) {
    option (google.api.http) = {
      post : "/v1/greeter:SayManyHellos"
      body : "*"
    };
  }
}

// Request message containing the user's name
message HelloRequest { string name = 1; }

// Response message containing the greeting
message HelloResponse {
  string message = 1;
  string timestamp = 2;
}